--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,14 +5,23 @@ parts =
 
 auto-checkout =
         mete0r.recipe.whoami
+        kotti
+
+show-picked-versions = true
+
 
 [sources]
 mete0r.recipe.whoami = git https://github.com/mete0r/recipe.whoami.git
+kotti = git https://github.com/Kotti/Kotti.git
+
+
+[versions]
+colander = 1.0a1
 
 
 [server]
 recipe = zc.recipe.deployment
-name = mysite.dev
+name = kotti.mete0r.dev
 admin = root@localhost
 user = ${server.whoami:user}
 etc-user = ${:user}
@@ -31,6 +40,79 @@ paths = ${:directory}
 mode = 0755
 
 directory = ${server:var-prefix}/www
+
+
+[server.ini]
+recipe = collective.recipe.template
+mode   = 0644
+output = ${server:etc-directory}/server.ini
+input  =
+        inline:
+        # Documentation for this file is available at:
+        #   kotti.readthedocs.org/en/latest/index.html#configuration-and-customization
+
+        [app:kotti]
+        use = egg:kotti
+
+        # kotti.site_title: your site's title
+        kotti.site_title = ${server:name}
+
+
+        # kotti.secret: defines the initial password of the 'admin' user
+        kotti.secret = qwerty
+
+
+        # sqlalchemy.url: the database that you want to use, defaults to SQLite
+        # see http://www.sqlalchemy.org/docs/core/engines.html#database-urls
+        sqlalchemy.url = sqlite:///${server:lib-directory}/Kotti.db
+
+
+        # mail.default_sender: configure the 'from' address of emails sent by Kotti
+        mail.default_sender = yourname@yourhost
+
+
+        # kotti.includes: include add-ons; an example:
+        # kotti.includes = kotti_twitter.include_search_widget
+
+
+        # kotti.configurators: another hook for add-ons
+        # kotti_tinymce should always be present (unless you don't want WYSIWYG editing)
+        kotti.configurators = kotti_tinymce.kotti_configure
+
+
+        # kotti.asset_overrides: override Kotti's templates and resources; an example:
+        # kotti.asset_overrides = mypackage:kotti-overrides/
+
+
+        # pyramid.default_locale_name: set the user interface language
+        pyramid.default_locale_name = ko
+
+        kotti.url_normalizer.map_non_ascii_characters = False
+        kotti.register = True
+
+
+        pyramid.includes =
+          pyramid_tm
+        #  pyramid_debugtoolbar
+
+
+        [filter:fanstatic]
+        use = egg:fanstatic#fanstatic
+
+
+        [pipeline:main]
+        pipeline =
+            fanstatic
+            kotti
+
+
+[server.wsgi]
+recipe = collective.recipe.modwsgi
+eggs =
+        kotti
+        pastedeploy
+config-file = ${server.ini:output}
+target = ${buildout:directory}/parts/server.wsgi
 
 
 [server.apache2.site]
@@ -55,6 +137,12 @@ input  =
                         Order deny,allow
                         Allow from all
                 </Directory>
+
+                WSGIPassAuthorization On
+                WSGIDaemonProcess ${server:name} user=${:user} group=${:group}
+                WSGIProcessGroup ${server:name}
+                WSGIApplicationGroup %{GLOBAL}
+                WSGIScriptAlias / ${server.wsgi:target}
 
                 ErrorLog ${server:log-directory}/error.log
                 LogLevel warn
