--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,10 +2,12 @@
 extensions = mr.developer
 parts =
         server.run
+        bootswatch
 
 auto-checkout =
         mete0r.recipe.whoami
         kotti
+        bootswatch
 
 show-picked-versions = true
 
@@ -13,11 +15,25 @@ show-picked-versions = true
 [sources]
 mete0r.recipe.whoami = git https://github.com/mete0r/recipe.whoami.git
 kotti = git https://github.com/Kotti/Kotti.git
+bootswatch = git https://github.com/thomaspark/bootswatch.git egg=false
 
 
 [versions]
 colander = 1.0a1
 
+
+[bootswatch]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+cmds =
+        mkdir -p ${:target-directory}
+        ln -sf ${:source-directory}/bootstrap.css ${:target-directory}/
+        ln -sf ${:source-directory}/bootstrap.min.css ${:target-directory}/
+
+source-directory = ${buildout:directory}/src/bootswatch/${:theme}
+target-directory = ${server.docroot:directory}/fanstatic/bootstrap/css
+theme = flatly
 
 [server]
 recipe = zc.recipe.deployment
@@ -137,6 +153,8 @@ input  =
                         Order deny,allow
                         Allow from all
                 </Directory>
+
+                Alias /fanstatic/bootstrap/css/ ${server.docroot:directory}/fanstatic/bootstrap/css/
 
                 WSGIPassAuthorization On
                 WSGIDaemonProcess ${server:name} user=${:user} group=${:group}
