use hostsman to install entry in /etc/hosts

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ parts =
 
 auto-checkout =
         mete0r.recipe.whoami
+        mete0r.hostsman
         kotti
         bootswatch
 
@@ -14,6 +15,7 @@ show-picked-versions = true
 
 [sources]
 mete0r.recipe.whoami = git https://github.com/mete0r/recipe.whoami.git
+mete0r.hostsman = git https://github.com/mete0r/hostsman.git
 kotti = git https://github.com/Kotti/Kotti.git
 bootswatch = git https://github.com/thomaspark/bootswatch.git egg=false
 
@@ -173,6 +175,15 @@ user=${server:user}
 group=${server:group}
 
 
+[server.manage]
+recipe = zc.recipe.egg
+eggs =
+        mete0r.hostsman
+
+
+hostsman = ${buildout:bin-directory}/hostsman
+
+
 [server.install]
 recipe = collective.recipe.template
 output = ${buildout:bin-directory}/server.install
@@ -185,6 +196,7 @@ input =
         ln -sf "${:source}" "${:target}"
         a2ensite ${server:name}
         ${server.reload:output} > /dev/null 2> /dev/null
+        ${server.manage:hostsman} put ${server:name}=127.0.0.1
 
 source = ${server.uninstall:source}
 target = ${server.uninstall:target}
@@ -197,6 +209,7 @@ mode = 0755
 input =
         inline:
         #!/bin/sh
+        ${server.manage:hostsman} delete ${server:name}
         a2dissite ${server:name}
         [ ! "$(readlink -f '${:target}')" -ef "${:source}" ] || rm -f "${:target}"
         ${server.reload:output} > /dev/null 2> /dev/null
