add bin/bootswatch to change theme

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,14 +28,26 @@ colander = 1.0a1
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
-cmds =
-        mkdir -p ${:target-directory}
-        ln -sf ${:source-directory}/bootstrap.css ${:target-directory}/
-        ln -sf ${:source-directory}/bootstrap.min.css ${:target-directory}/
+cmds = ${bootswatch.script:output}
+theme = custom
 
-source-directory = ${buildout:directory}/src/bootswatch/${:theme}
+
+[bootswatch.script]
+recipe = collective.recipe.template
+output = ${buildout:bin-directory}/bootswatch
+mode = 0755
+input =
+        inline:
+        mkdir -p ${:target-directory}
+        theme=$1
+        [ -n "$theme" ] || theme=${:default-theme}
+        ln -sf ${:source-directory}/$theme/bootstrap.css ${:target-directory}/
+        ln -sf ${:source-directory}/$theme/bootstrap.min.css ${:target-directory}/
+
+source-directory = ${buildout:directory}/src/bootswatch
 target-directory = ${server.docroot:directory}/fanstatic/bootstrap/css
-theme = flatly
+default-theme = ${bootswatch:theme}
+
 
 [server]
 recipe = zc.recipe.deployment
