generate kotti's css files from less files + bootswatch theme

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 extensions = mr.developer
 parts =
         server.run
-        bootswatch
+        build-assets-initial
 
 auto-checkout =
         mete0r.recipe.whoami
@@ -24,29 +24,46 @@ bootswatch = git https://github.com/thomaspark/bootswatch.git egg=false
 colander = 1.0a1
 
 
-[bootswatch]
+[build-assets-initial]
 recipe = collective.recipe.cmd
 on_install = true
-on_update = true
-cmds = ${bootswatch.script:output}
-theme = custom
+on_update = false
+cmds = ${build-assets:output} "${:default-theme}"
+default-theme = custom
 
 
-[bootswatch.script]
+[build-assets]
 recipe = collective.recipe.template
-output = ${buildout:bin-directory}/bootswatch
+output = ${buildout:bin-directory}/build-assets
 mode = 0755
 input =
         inline:
-        mkdir -p ${:target-directory}
+        #!/bin/sh
         theme=$1
-        [ -n "$theme" ] || theme=${:default-theme}
-        ln -sf ${:source-directory}/$theme/bootstrap.css ${:target-directory}/
-        ln -sf ${:source-directory}/$theme/bootstrap.min.css ${:target-directory}/
+        [ -n "$theme" ] || {
+                echo "usage: $0 <bootswatch theme>"
+                exit 1
+        }
+        include_path="${buildout:directory}/src/bootswatch/$theme"
 
-source-directory = ${buildout:directory}/src/bootswatch
-target-directory = ${server.docroot:directory}/fanstatic/bootstrap/css
-default-theme = ${bootswatch:theme}
+        bootswatch_root_dir="${buildout:directory}/src/bootswatch"
+        bootswatch_theme_dir="$bootswatch_root_dir/$theme"
+        kotti_less_dir="${buildout:directory}/kotti_less"
+        kotti_assets_dir="${server.docroot:directory}/fanstatic/kotti"
+
+        mkdir -p "$kotti_assets_dir"
+
+        lessfiles='base.less edit.less upload.less view.less'
+        for lessfile in $lessfiles; do
+                name=`echo $lessfile | sed -e 's/\(.*\)[.]less$/\1/g'`
+                lessc --include-path="$bootswatch_theme_dir" "$kotti_less_dir/$lessfile" > "$kotti_assets_dir/$name.css"
+                lessc --include-path="$bootswatch_theme_dir" "$kotti_less_dir/$lessfile" --clean-css > "$kotti_assets_dir/$name.min.css"
+        done
+
+        target_dir="${server.docroot:directory}/fanstatic/bootstrap/css"
+        mkdir -p "$target_dir"
+        ln -sf "$bootswatch_theme_dir/bootstrap.css" "$target_dir/"
+        ln -sf "$bootswatch_theme_dir/bootstrap.min.css" "$target_dir/"
 
 
 [server]
@@ -169,6 +186,7 @@ input  =
                 </Directory>
 
                 Alias /fanstatic/bootstrap/css/ ${server.docroot:directory}/fanstatic/bootstrap/css/
+                AliasMatch ^/fanstatic/kotti/(.*).css$ ${server.docroot:directory}/fanstatic/kotti/$1.css
 
                 WSGIPassAuthorization On
                 WSGIDaemonProcess ${server:name} user=${:user} group=${:group}
